<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/add_task_first"
        android:textSize="18sp"/>

    <VideoView
        android:id="@+id/frag_addTask_videoView_1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/add_task_second"
        android:textSize="18sp"/>

    <VideoView
        android:id="@+id/frag_addTask_videoView_2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/add_task_third"
        android:textSize="18sp"/>

    <VideoView
        android:id="@+id/frag_addTask_videoView_3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"/>

</LinearLayout>