<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="6dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_200"
                android:orientation="horizontal"
                style="@style/Theme.TaskManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TimePicker
                    android:id="@+id/dialog_ct_tp_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DialogTimePicker"
                    android:timePickerMode="clock" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:text="@string/priority"
                    style="@style/DialogText"/>

                <Spinner
                    android:id="@+id/dialog_spin_priority"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/priorities_selection" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <EditText
                    android:id="@+id/dialog_ct_et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="center"
                    android:theme="@style/DialogEditText"
                    android:hint="@string/task_title_hint"
                    android:inputType="textShortMessage|textCapSentences"
                    android:maxLength="20"/>

                <EditText
                    android:id="@+id/dialog_ct_et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:theme="@style/DialogEditText"
                    android:gravity="start|top"
                    android:hint="@string/task_description_hint"
                    android:inputType="textMultiLine|textCapSentences" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_1">

                <Button
                    android:id="@+id/dialog_ct_btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    style="@style/DialogButton"/>

                <Button
                    android:id="@+id/dialog_ct_btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    style="@style/DialogButton"/>

            </LinearLayout>

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                style="@style/DialogDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <View
                android:id="@+id/divider_2"
                android:layout_width="1dp"
                android:layout_height="0dp"
                style="@style/DialogDivider"
                app:layout_constraintBottom_toBottomOf="@+id/ll_buttons"
                app:layout_constraintEnd_toEndOf="@+id/ll_buttons"
                app:layout_constraintStart_toStartOf="@+id/ll_buttons"
                app:layout_constraintTop_toTopOf="@+id/ll_buttons" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</ScrollView>