<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_info"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/white"
            app:popupTheme="@style/Widget.AppCompat.PopupMenu" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_guide"
                style="@style/InfoTittleText"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:background="?attr/colorPrimary"/>

            <LinearLayout
                android:layout_marginVertical="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/info_btn_addTaskGuide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_add_task_title"
                    style="@style/ButtonDropDown"
                    android:background="@color/black"/>

                <include
                    android:id="@+id/info_include_addTask"
                    layout="@layout/fragment_how_add_task_guide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/info_btn_priorityGuide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_priority_behaviour_title"
                    style="@style/ButtonDropDown"
                    android:background="@color/black"/>

                <include
                    android:id="@+id/info_include_priority"
                    layout="@layout/fragment_priority_guide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>